fix(b-avatar): prevent avatar from being squished (#5963)
Closes #5962

--- a/src/components/avatar/_avatar.scss
+++ b/src/components/avatar/_avatar.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   vertical-align: middle;
+  flex-shrink: 0;
   width: $b-avatar-size;
   height: $b-avatar-size;
   font-size: inherit;
